--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -52,7 +52,7 @@
     {% for post in allPosts %}
         <div class="post-container">
             <div class="post-header">
-                <a href="{% url 'profile' poster=post.poster.id %}" class="poster-container">
+                <a href="{% url 'profile' posterId=post.poster.id %}" class="poster-container">
                     <div class="poster-img"></div>
                     <div class="poster-name"><h5>{{post.poster}}</h5></div>
                 </a>
