--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -15,10 +15,10 @@
         <form action="{% url 'login' %}" method="post" class="login-form">
             {% csrf_token %}
             <div class="form-group post-header">
-                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+                <input autofocus class="form-control form-field" type="text" name="username" placeholder="Username">
             </div>
             <div class="form-group post-header">
-                <input class="form-control" type="password" name="password" placeholder="Password">
+                <input class="form-control form-field" type="password" name="password" placeholder="Password">
             </div>
             <input class="btn btn-primary action" type="submit" value="Login">
         </form>
