--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -24,6 +24,7 @@
             <div class="form-group post-header">
                 <input class="form-control form-field" required type="password" name="confirmation" placeholder="Confirm Password">
             </div>
+            <input type="file" class="form-control form-field">
             <input class="btn btn-primary action" type="submit" value="Register">
         </form>
 
