--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -34,7 +34,9 @@
             <div class="user-container">
                 {% if user.is_authenticated %}
                     <div class="user-img-name-container">
-                        <div class="user-img"></div>
+                        <div class="user-img">
+                            <img src="{{user.profile.image.url}}" alt="">
+                        </div>
                             <div class="user-name"><strong>{{ user.username }}</strong></div>   
                     </div>
                 {% endif %}
