--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -12,7 +12,11 @@
       <div class="user-info">
         <div class="personal">
           <div class="user-img ">
+            {% if user_profile %}
+            <img src="{{user_profile.image.url}}" alt="" class="user-img">
+            {% else %}
             <img src="" alt="" class="user-img">
+            {% endif %}
             <button type="button" class="edit-profile-pic">edit</button>
           </div>
           <div class="user-name"><strong>{{ posterName }}</strong></div>   
