--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -13,11 +13,11 @@
         <div class="personal">
           <div class="user-img ">
             {% if user_profile %}
-            <img src="{{user_profile.image.url}}" alt="" class="user-img">
+            <img src="{{user_profile.image.url}}" alt=" no image" class="user-img">
             {% else %}
             <img src="" alt="" class="user-img">
             {% endif %}
-            <button type="button" class="edit-profile-pic">edit</button>
+            <button type="button" data-upload-url="{% url 'upload_pic' %}" class="edit-profile-pic">edit</button>
           </div>
           <div class="user-name"><strong>{{ posterName }}</strong></div>   
         </div>
@@ -54,7 +54,11 @@
             <div class="post-header">
                 <a href="{% url 'profile' posterId=post.poster.id %}" class="poster-container">
                     <div class="poster-img">
-                      <img src="" alt="">
+                      {% if user_profile %}
+                      <img src="{{user_profile.image.url}}" alt=" no image" class="poster-img">
+                      {% else %}
+                      <img src="" alt="" class="poster-img">
+                      {% endif %}
                     </div>
                     <div class="poster-name"><h5>{{post.poster}}</h5></div>
                 </a>
