--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -12,7 +12,7 @@
       <div class="user-info">
         <div class="personal">
           <div class="user-img profile-image ">
-            {% if user_profile %}
+            {% if user.user_profile.image %}
             <img src="{{user_profile.image.url}}" alt=" no image" class="user-img image">
             {% else %}
             <img src="" alt="" class="user-img">
@@ -56,7 +56,7 @@
             <div class="post-header">
                 <a href="{% url 'profile' posterId=post.poster.id %}" class="poster-container">
                     <div class="poster-img">
-                      {% if user_profile %}
+                      {% if post.poster.user_profile.image %}
                       <img src="{{post.poster.user_profile.image.url}}" alt=" no image" class="poster-img">
                       {% else %}
                       <img src="" alt="" class="poster-img">
