--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -35,7 +35,11 @@
                 {% if user.is_authenticated %}
                     <div class="user-img-name-container">
                         <div class="user-img">
+                            {%if user.user_profile.image%}
                             <img class="user-img" src="{{user.user_profile.image.url}}" alt="">
+                            {%else%}
+                            <img src="" alt="" class="user-img">
+                            {%endif%}
                         </div>
                             <div class="user-name"><strong>{{ user.username }}</strong></div>   
                     </div>
